# Pascension

./: .gitignore  .mcp.json  CLAUDE.md  README.md
.claude/skills/art-pipeline/: SKILL.md
.claude/skills/card-art/: SKILL.md
.claude/skills/cards/: SKILL.md
.claude/skills/ci-release/: SKILL.md
.claude/skills/localization/: SKILL.md
.claude/skills/networking/: SKILL.md
.claude/skills/pascension-balance/: SKILL.md
.claude/skills/pascension-cards/: SKILL.md
.claude/skills/pascension-engine/: SKILL.md
.claude/skills/playtesting/: SKILL.md
.claude/skills/project-map/: SKILL.md
.claude/skills/rules-engine/: SKILL.md
.claude/skills/shards-cards/: SKILL.md
.github/workflows/: release.yml  tests.yml
Assets/: DefaultNetworkPrefabs.asset  GDD.txt  UniversalRenderPipelineGlobalSettings.asset
Assets/Art/: CardArtIndex.asset
Assets/Scenes/: Game.unity  GameShards.unity  Lobby.unity  MainMenu.unity  SampleScene.unity
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Tools/: art_manifest.json  soi_art_sources.json
Tools/EngineVerify/: Engine.Verify.csproj
Tools/RunPod/: config.env  orchestrate.py
Tools/ShardsData/: art-prompts-extra.json  art-prompts.json  balance-report-diamond.json  balance-report-diamond.md  balance-report-strong.json  balance-report-strong.md  balance-report.json  balance-report.md  bot-ranks.md  campaign-log.md  cards-table.md  rules-notes.md  sim-summary-diamond.csv  sim-summary-strong.csv  sim-summary.csv
Tools/ShardsML/: pyproject.toml  train.py
Tools/SoiSim/: Program.cs  SoiSim.csproj
(+331 files in other folders)
